src/test/ui/try-block/try-block-opt-init.stderr
error[E0381]: borrow of possibly-uninitialized variable: `cfg_res`
  --> $DIR/try-block-opt-init.rs:15:5
   |
LL |     assert_eq!(cfg_res, 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^ use of possibly-uninitialized `cfg_res`
   |
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
